--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,18 @@
             </plugin>
 
         </plugins>
+
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
+        <finalName>wallet-orm</finalName>
+
     </build>
 
 
